change admin controller and update documentation
